--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -23,3 +23,6 @@
   font-family: "TT Norms Medium", sans-serif;
   font-weight: 500;
 }
+.ant-upload.ant-upload-select-picture-card{
+  margin: 0;
+}
