--- a/src/styles/LangSelector.module.css
+++ b/src/styles/LangSelector.module.css
@@ -12,11 +12,12 @@
     position:      relative;
 }
 .flagOutline{
+    box-sizing:    content-box !important;
     position:      absolute;
-    width:         40px;
-    height:        40px;
-    top:           -5px;
-    left:          -5px;
+    width:         29px;
+    height:        29px;
+    top:           -4.5px;
+    left:          -4.5px;
     border-radius: 50px;
-    border:        6px solid #1890FF;
+    border:        5px solid #1890FF;
 }
