--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -26,3 +26,14 @@
 .ant-upload.ant-upload-select-picture-card{
   margin: 0;
 }
+.content{
+  background:      #FFFFFF;
+  border-radius:   10px;
+  margin: 24px 16px;
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+}
+.transition{
+  transition: 0.5s;
+}
